# doxygen-guard

./: .doxygen-guard.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/proposals/ACTIVE/: P1-20260401-001.md  P2-20260320-001.md
.claude/proposals/IDEAS/: P2-20260402-001.md
.claude/reports/adversarial/: 20260320-P2-tag-taxonomy.md
.claude/reports/security/: 20260319-adversarial-security.md
.claude/reports/synthesis/: 20260319-adversarial-full-summary.md
.github/workflows/: ci.yml  release.yml
docs/: requirements.csv
scripts/: regen_golden.py
src/doxygen_guard/: __init__.py  ast_walker.py  checks.py  config.py  coverage.py  git.py  impact.py  main.py  parser.py  trace.py  tracer.py  tracer_models.py  ts_languages.py  ts_parser.py
tests/: conftest.py  test_ast_walker.py  test_checks.py  test_checks_extended.py  test_config.py  test_coverage.py  test_edge_cases.py  test_git.py  test_golden.py  test_impact.py  test_infrastructure.py  test_main.py  test_parser.py  test_python.py  test_trace.py  test_ts_languages.py  test_ts_parser.py
tests/fixtures/: attribute.c  bad_tags.c  braces_in_strings.c  cpp_methods.cpp  decorative_comment.c  forward_decl.c  java_simple.java  mixed_comments.c  no_requirements_config.yaml  python_simple.py  simple.c  stale_version.c  typedef_returns.c
tests/fixtures/impact/: req.csv  (+1 more)
tests/golden/: REQ-0010.puml  REQ-0011.puml  REQ-0012.puml  REQ-0020.puml  REQ-0021.puml  REQ-0030.puml  REQ-0040.puml  REQ-0041.puml  REQ-0050.puml  REQ-0060.puml  REQ-0061.puml  REQ-0062.puml  REQ-PROD-001.puml  REQ-PROD-002.puml  REQ-PROD-003.puml
(+11 files in other folders)
